# java-ipfs-http-client

./: .classpath  .git-blame-ignore-revs  .gitignore  .gitmodules  .project  .travis.yml  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  build.xml  docker-compose.yml  install-run-ipfs.sh  jitpack.yml  mac-install-run-ipfs.sh  pom.xml
.github/: dependabot.yml
.github/workflows/: ant.yml  ci.yml
src/main/java/: module-info.java
src/main/java/io/ipfs/api/: AddArgs.java  BUILD.bazel  HttpMultipartClient.java  IPFS.java  IpldNode.java  JSONParser.java  KeyInfo.java  MerkleNode.java  Multipart.java  NamedStreamable.java  Options.java  Pair.java  Peer.java  RepoStat.java  Version.java  WriteFilesArgs.java
src/main/java/io/ipfs/api/cbor/: BUILD.bazel  CborConstants.java  CborDecoder.java  CborEncoder.java  CborObject.java  CborType.java  Cborable.java
src/main/java/io/ipfs/api/demo/: BUILD.bazel  UsageMFSFilesAPI.java  UsageRemotePinningAPI.java
src/main/java/org/ipfs/: Base58.java  MerkleNode.java  Protocol.java
src/main/java/org/ipfs/api/: Base32.java  Base58.java  IPFS.java  JSONParser.java  MerkleNode.java  MultiAddress.java  Multihash.java  Multipart.java  NamedStreamable.java  Protocol.java
src/org/ipfs/: Hash.java  IPFS.java  JSONParser.java  MerkleNode.java  MerkleObject.java  MultiAddress.java  Multihash.java  Multipart.java  NamedStreamable.java  NodeAddress.java
src/test/: BUILD.bazel  test_utils.bzl
src/test/java/io/ipfs/api/: APITest.java  AddTest.java  BUILD.bazel  IPFSAddTest.java  IdTest.java  LinkNameTest.java  RecursiveAddTest.java  SimpleAddTest.java  Versions.java  VersionsTest.java
src/test/java/org/ipfs/api/: APITests.java  MultiAddressTests.java  Test.java
src/test/resources/folder/: changeme.html
src/test/resources/html/: index.html
src/test/resources/html/chap/: ch01.html
test/org/ipfs/: Test.java
