java_library (
    name = "core",
    visibility = ["//visibility:public"],
    srcs = glob(["*.java"]),
    deps = [
        "@multiaddr//:core",
        "@multihash//:core",
        "@multibase//:core",
        "@cid//:core",
        "//src/main/java/io/ipfs/api/cbor:cbor",
        ],
)

#TODO generate a distribution JAR with all the classes and the manifest