java_library (
    name = "test-core",
    visibility = ["//visibility:public"],
    srcs = glob(["*.java"]),
    deps = [
        "@multiaddr//:core",
        "//src/main/java/io/ipfs/api:core",
        "//src/main/java/io/ipfs/api/cbor:cbor",
        "//:maven_deps",
        "@maven//:junit_junit",
        "@maven//:org_hamcrest_hamcrest",
        ],
)